packages/example/content/essentials-core/7.4.0/installing/00.prerequisites.md
---
title: Prerequisites
index: 0
---

# Prerequisites

Essentials Core and Boomerang Flow have two methods of installation: manual with Helm<sup>®</sup>, and the Boomerang CLI. By using the CLI, You can get a running Core installation in under **10 minutes**! The installer also supports installing into a local Kubernetes<sup>®</sup> cluster for development purposes

Please ensure you have read information on all the following information, especially related to the chosen Kubernetes service, to determine the correct method of installation.

## Environment

The officially supported and validated platforms are:

- IBM Cloud<sup>®</sup> Private 3.2.1+
- IBM Cloud Kubernetes<sup>®</sup> Service (IKS) 1.16+
- Red Hat<sup>®</sup> OpenShift<sup>®</sup> Container Platform 4.3+ with IBM Cloud Pak Foundational Services 3.2.3+
- Amazon<sup>®</sup> Elastic Kubernetes Service (EKS) 1.17+

## Docker

Make sure you have Docker<sup>®</sup> installed on your local machine if you are using the CLI installer:

  - `Docker Desktop` - https://www.docker.com/products/docker-desktop

## Cluster authentication and Kubernetes configuration

When running the installation, you need access to the kube config for cluster authentication.

As part of the CLI installation method, we mount the kube config file (usually: `$HOME/.kube/config`) to the docker container and use the **current-context** that is set.

### IKS

If you are logging into an IKS cluster using `ibmcloud login` and fetching your cluster configuration using `ibmcloud ks cluster config -c <cluster>`, it doesn't respect the `--skip-ssl-validation` flag and as such will create a link to an external PEM file. This pem file wouldn't be mounted to the installer and, as such, run the command with `--yaml` flag, as this embeds the PEM into the kube config file.

Make sure the version of the ibmcloud `container-service/kubernetes-service` plugin is at 1.0.0 or higher. You can find your current version by running `ibmcloud plugin list`

### EKS

Configure the Kubernetes context and cluster authentication using the following steps:
1. Acquire and setup `AWS Command Line Interface` - https://docs.aws.amazon.com/cli/latest/userguide/install-cliv2.html
2. Configure credentials by executing `aws configure` - https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-configure.html
3. Acquire and setup Kubernetes configuration using one of the options below:
   1. Automatically by executing `aws eks --region region-code update-kubeconfig --name cluster_name` - which updates your `$HOME/.kube/config` file.
   2. Manually using the `AWS CLI` or `AWS IAM authenticator for Kubernetes` - https://docs.aws.amazon.com/eks/latest/userguide/create-kubeconfig.html#create-kubeconfig-manually.

## Container registry access

In order to download the required container images, you will need to use one of the following registries:

- The external registry - access to the officially released versions of images and accessible externally from IBM Cloud Container Registry. Requires IAM credentials.
- The public registry - accessible only inside of IBM to the officially released versions of images. Does not require credentials.
- The private registry - accessible only inside of IBM to all versions of the images. Requires credentials (email and token).

### External registry

> **Note**: The `external` registry requires access using IAM credentials.

The following Kubernetes Services should use the **external** registry:
 - `IKS` (IBM Cloud Kubernetes Service)
 - `ROKS` (RedHat OpenShift Kubernetes Service)
 - `EKS` (Amazon Elastic Kubernetes Service)
 - Other Kubernetes Service platforms outside of IBM

### Private and Public registries
 - `ICP` (IBM Cloud Private)
 - `KIND` local cluster (Kubernetes IN Docker)

## Software

It is expected that you have one of the supported Kubernetes platforms fully installed and correctly configured with additional software requirements that may be met by the platform above.

The installer can install the mandatory dependencies for you, including; Helm<sup>®</sup> NGINX Ingress Controller, and MongoDB<sup>®</sup>.

- Ensure you have met all the requirements for the installation of the supported base platform.
- Ensure you have read and can meet all the dependencies for core listed in the [Essentials Core Application Architecture](/boomerang/architecture/application-architecture)

### Helm

Starting with version 7.3.0, all Boomerang charts were migrated to Helm v3.

These charts can be accessed by adding the following helm repositories, and will be required if manually installing:

```sh
helm repo add boomerang-charts https://tools.boomerangplatform.net/artifactory/boomeranglib-helm

helm repo add boomerang-io https://raw.githubusercontent.com/boomerang-io/charts/index
```

### Ingress controller

Essentials Core uses the Kubernetes Ingress object and industry annotations with support for the NGINX Ingress Controller 0.22.0 and above.

If installing manually, and not using Redis, the following `configmap` additions are required:

```
  http-snippet: |
    proxy_cache_path        /tmp/nginx levels=1:2 keys_zone=authentication:10m inactive=3s;
```

### MongoDB

Right now, we are limited with the version of MongoDB that can be used. The highest version that can be used is **4.0.X**, otherwise the Essentials Core data loader wont be able to run due to internal code dependencies.

If installing manually, we recommend that you:
- Install with Persistent Storage
- Set the PVC to `retain`
- Use a minimum recommended storage of `2Gi`

## Storage

If you want to set up persistent storage, you must have physical volumes available and supported as a Kubernetes volume type.

## TLS certificates

TLS Certificates are required for the Ingress to be able to serve securely over HTTPS. If the Kubernetes environment you are using does not provide you with certificates, we recommend using [Jetstack's Cert Manager](https://cert-manager.readthedocs.io/):
 - Installing `cert-manager` using Helm - https://cert-manager.io/docs/installation/kubernetes/#installing-with-helm

You will then need to create the required Kubernetes objects to be able to generate a TLS certificate.

This is not taken care of by the installer.

## Network

Supported for use with IPv4 networks only.

## Installing

### Installing on ICP

When installing on ICP (IBM Cloud Private), the Boomerang Auth Proxy needs to be installed on a node labeled with `Proxy` and sit next to the NGINX Ingress Controller provided by ICP.

### Installing on IKS

When installing on IKS, there are a few dependencies to account for.
- We currently do not support the Free Single Node Cluster, as it does not have support for Ingress.
- The installer currently doe not support multi-zone cluster deployments. For the moment, we only support `Single zone` location clusters.

#### Application Load Balancer

The standard ALB (Application Load Balancer) provided with an IKS cluster does not support the Ingress pattern we have implemented in Core, nor does it fully support all of the industry annotations.

However, IBM Cloud Kubernetes Service supports the community Kubernetes Ingress image, which is built on the community Kubernetes project's implementation of the NGINX Ingress Controller. The installation works with the IKS community Kubernetes Ingress Controller or with your own Ingress Controller. Please check the details in the specific subchapters.

The following steps, referencing IBM Cloud documentation, will help you to implement the required changes.

##### Edge nodes

We recommend creating a node pool with one worker node to act as a traffic / proxy node.

1. Follow the instructions in [Restricting network traffic to edge worker nodes](https://cloud.ibm.com/docs/containers?topic=containers-edge).

2. In Step 1 of [Isolating networking workloads to edge nodes](https://cloud.ibm.com/docs/containers?topic=containers-edge#edge_nodes), create a node pool with label of dedicated=edge. If you forget to add the label you can do this after the Node Pool creation by running on each node:

```
kubectl label node <node> node-role.kubernetes.io/edge=true dedicated=edge --overwrite=true
```

3.  In Step 1 of [Preventing app workloads from running on edge worker nodes](https://cloud.ibm.com/docs/containers?topic=containers-edge#edge_workloads), you can run the following command

```sh
kubectl taint node -l dedicated=edge dedicated=edge:NoSchedule
```

4. You do not need to complete the last section titled "Isolating ALB proxy workloads to edge nodes in classic gateway-enabled clusters."


##### Setting up community Kubernetes Ingress Controller

IBM Cloud Kubernetes Service supports the community Kubernetes Ingress edition built on the NGINX Ingress Controller.
Follow these steps to be able to install and use the community Kubernetes Ingress Controller.

1. Get the existing ALB IP addresses that are registered by default with the Ingress subdomain. In the output, look for the IP(s) that are registered for the Ingress subdomain for your cluster.
```
ibmcloud ks nlb-dns ls --cluster <cluster_name_or_ID>
```

2. Disable the existing public and private ALBs that come with IKS. Remove the ALB IP addresses from the subdomain. If you have a multizone cluster, run this command for each ALB IP address.
```
ibmcloud ks nlb-dns rm classic --cluster <cluster_name_or_ID> --ip <ALB_IP> --nlb-host <Ingress_subdomain>
```

3. Retrieve all existing ALBs:
```
ibmcloud ks albs --cluster <cluster_name_or_ID>
```

4. Disable the existing ALBs:
```
ibmcloud ks alb configure classic --alb-id <alb_ID> --disable
```

5. Identify the available Community Ingress versions. The version you are looking for is under the `Community Ingress versions` section.
```
ibmcloud ks alb versions
```

6. Retrieve all of the worker zones that your existing worker nodes are connected to.
```
ibmcloud ks cluster get --cluster <cluster_name_or_ID>
```

7. For each zone, list available VLANs.
```
ibmcloud ks vlan ls --zone <zone>
```

8. Create a public IKS Community Ingress ALB with the available image version from the previous output.
```
ibmcloud ks alb create classic --cluster <cluster_name_or_ID> --type <public_or_private> --zone <zone> --vlan <VLAN_ID> --version <image_version_iks>
```


##### Adjusting for bring your own Ingress Controller

Follow these steps to be able to use the NGINX Ingress Controller, either installed by the installer or manually.

1. Follow the instructions in [Bring your own ingress controller](https://cloud.ibm.com/docs/containers?topic=containers-ingress-user_managed) _skipping sections 1 - 5 if the installer will be automatically installing the NGINX Ingress Controller._

2. If you are installing and wanting a **new** DNS subdomain then you will need to follow from **Step 6: Create a new DNS hostname** - **before** - you use the installer to install your own NGINX Ingress Controller

3. **Pause** and run the installer with NGINX installation set to true in the `config.state` file or answer `y` during interactive mode.

4. Follow from **Step 6: Use the existing Ingress subdomain for your cluster** - **after** - you have used the installer to install your own NGINX Ingress Controller, even if you created a new DNS in the prior steps as we have to switch the Load Balancer IP. When you need the new IP address, run: `kubectl get services -n kube-system nginx-ingress-controller` and use the EXTERNAL-IP

#### TLS Secret

When using an IBM Cloud provided DNS a TLS Secret will be created in the default namespace. The installer will take of copying this to your namespace.

Reference: [Ingress TLS termination](https://cloud.ibm.com/docs/containers?topic=containers-ingress#public_inside_3)

#### Storage class

The default bronze storage class will not work with MongoDB and is, unfortunately, extremely slow. The installer will take care of provisioning using the `ibmc-file-gold` storage class.

If you wish to manually adjust the default storage class, we recommend to at least use the gold storage class. You can read more about this here:
* [Updating your storage class](https://cloud.ibm.com/docs/containers?topic=containers-kube_concepts#update_storageclass)

### Installing on EKS

When using the CLI installer, the kubeconfig should be configured with the `AWS IAM authenticator for Kubernetes` method.

#### Application Load Balancer

Amazon EKS doesn't have by default a Load Balancer deployed. 

When manually installing, the NGINX Ingress Controller values should be set according to the instructions from [Advanced installs](/essentials-core/installing/installing#advanced-installs) section. When the process is completed, AWS will automatically provide a DNS host for that Load Balancer service. The service can be retrieved with: `kubectl get svc -n kube-system | grep LoadBalancer`.

When using the CLI, the NGINX Ingress Controller will be installed and properly configured (the answer whether to install NGINX Ingress Controller needs to be set to `Y`).
